--- a/Template 1/index.html
+++ b/Template 1/index.html
@@ -25,9 +25,8 @@
 </div>
 
 <div class="plant">
-  <h1>Created by local plant artiste.</h1>
-  <h1>Curated just for your home.</h1>
-
+  <h1>Created by local plant artiste.</br>
+  Curated just for your home.</h1>
   <p> Read our story</p>
 
   <div class="bgimg">
