--- a/Template-3/index.html
+++ b/Template-3/index.html
@@ -43,9 +43,9 @@
       <div class="imgcouv">
         <img src="images/imgcouv.jpg" alt="Image de couverture">
       </div>
-
-      
     </div>
+
+    <input class="button"type="button"value="Réservez">
 
 
 
