--- a/Template-1/index.html
+++ b/Template-1/index.html
@@ -1,41 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homelivet</title>
+    <meta charset="UTF-8">
       <link rel="stylesheet" href="css/index.css">
       <script src="https://kit.fontawesome.com/ddde616424.js" crossorigin="anonymous"></script>
+      <title>Homelivet</title>
   </head>
 
   <body>
+      <div class="part1">
+        <div class="text1">
+          <p>TENDERCARE</p>
+        </div>
+      </div>
 
-<div class="head">
-  <div class="Homelivet">
-    <p><i class="fas fa-circle"></i>Homelivet</p>
-  </div>
-    <nav class="navbar">
-      <a href="#Home">Home</a>
-      <a href="#Products">Products</a>
-      <a href="#The Story">The Story</a>
-      <a href="#Pricing">Pricing</a>
-      <a href="#Contact">Contact</a>
-    </nav>
-  <div class="button">
-    <input class="favorite styled"type="button"value="Sign up now">
-</div>
-</div>
+      <div class="part2">
+        <div class="title">
+          <h1> Lorem ipsum
+            <br> dolor sit
+            <br>amet
+          </h1>
+        </div>
+      </div>
 
-<div class="plant">
-  <h1>Created by local plant artiste.</br>
-  Curated just for your home.</h1>
-  <p> Read our story</p>
+      <div class="part3">
+        <img src="img/img1.jpg" alt"plantes">
+      </div>
 
-  <div class="bgimg">
-    <img src="images/minh-pham-7pCFUybP_P8-unsplash.jpg" alt="home">
-  </div>
-</div>
-
-<div class="bgimg1">
-  <img src="images/minh-pham-YAPZt8wxMO4-unsplash.jpg" alt="home2">
 
   </body>
 </html>
